# time-offset-geotagger

./: LICENSE  README.md  pyproject.toml  time_offset_geotagger_gui.py
src/time_offset_geotagger/: app.py  exif.py  gpx.py  timeutil.py
tests/: test_gpx.py  test_timeutil.py
