[project]
name = "time-offset-geotagger"
version = "0.1.0"
description = "Tag camera photos with interpolated GPS positions from a GPX track and a time offset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "piexif>=1.1.3",
    "PySide6>=6.6",
]

[project.scripts]
time-offset-geotagger = "time_offset_geotagger.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/time_offset_geotagger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
